Fixed footer alignment.

--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,8 @@ footer, header, hgroup, menu, nav, section {
 html, body {
     height: 100%;
     width: 100%;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 14px;
 }
 body {
     display: flex;
@@ -65,6 +67,7 @@ footer {
     position: fixed;
     bottom: 0;
     height: 100px;
+    width: 100%;
     left: 0;
     right: 0;
     text-align: center;
